<resources>
    <string name="app_name">LUMEN</string>
    <string name="login">Login</string>
    <string name="remember_me_on_this_device">Remember me on this device</string>
    <string name="lumen">LUMEN</string>
    <string name="sign_in_to_control_amp_monitor_xa_your_home_iot_system"><![CDATA[Sign in to control & monitor\nyour home IoT system.]]></string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="secured_session">SECURED SESSION</string>
    <string name="you_home_com">you@home.com</string>
    <string name="home_1234">home@1234</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Fullscreen\nContent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="triggered_by_pir_1">triggered by PIR 1</string>
    <string name="lightbulb">lightbulb</string>
    <string name="register">Register</string>

    <string name="sensor_active">ACTIVE</string>
    <string name="sensor_idle">IDLE</string>
    <string name="sensor_not_controlling">Not controlling lights</string>
    <string name="sensor_lighting_paused">Lighting control paused</string>
    <string name="sensor_no_motion">No motion detected</string>
    <string name="sensor_motion_controlling">Motion detected • controlling %1$s</string>

    <string name="ambient_day">DAY</string>
    <string name="ambient_dark">DARK</string>

    <string name="sensor_mode_manual">Manual mode</string>
    <string name="sensor_mode_auto">Automatic mode</string>
    <string name="sensor_mode_manual_description">Sensors are not controlling the lights</string>
    <string name="sensor_mode_auto_description">Sensors can control lights automatically</string>

    <string name="ldr_daylight">Daylight detected</string>
    <string name="ldr_dark">Darkness detected</string>

    <string name="add_light">Add Light</string>
    <string name="add_pir">Add PIR Sensor</string>
    <string name="add_ldr">Add LDR</string>
    <string name="lights">Lights</string>
    <string name="sensors">Sensors</string>
    <string name="no_lights">No lights configured</string>
    <string name="no_sensors">No sensors configured</string>

    <string name="light">Light</string>
    <string name="sensor">Sensor</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_device">Add Device</string>
    <string name="light_name_format">Light %1$d</string>
    <string name="gpio_format">GPIO %1$d</string>
    <string name="topic_format">topic: %1$s</string>
    <string name="device_count_format">%1$d registered devices</string>
    <string name="pir">PIR</string>
    <string name="ldr">LDR</string>
    <string name="linked_light_format">Linked light: %1$s</string>
    <string name="no_linked_light">No linked light</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>


    <string name="connected">● CONNECTED</string>
    <string name="disconnected">● DISCONNECTED</string>
    <string name="mode_auto">AUTO</string>
    <string name="mode_manual">MANUAL</string>

</resources>